# research_template

./: .gitignore  CLAUDE.md  init_project.sh  pyproject.toml  tracking.md
.claude/: settings.local.json
experiments/: CLAUDE.md  README.md
notes/: README.md
notes/weekly_updates/: CLAUDE.md
